feat(theme): introduce coffee theme and enhance theme management
- Added a new "coffee" theme with distinct color variables for improved visual appeal.
- Updated language files for English, French, and Chinese to include the coffee theme.
- Enhanced theme exports in the base theme and types to incorporate the coffee theme.
- Refined theme management by ensuring all themes, including coffee, are dynamically available in the ThemeProvider.
- Adjusted primary foreground color variables across themes for better consistency in UI elements.

--- a/console/src/assets/languages/en/components.json
+++ b/console/src/assets/languages/en/components.json
@@ -5,7 +5,8 @@
     "dark": "Dark",
     "cosmic": "Cosmic",
     "corporate": "Corporate",
-    "fresh": "Fresh"
+    "fresh": "Fresh",
+    "coffee": "Coffee"
   },
   "languageSwitcher": {
     "english": "English",
