--- a/console/src/assets/languages/fr/components.json
+++ b/console/src/assets/languages/fr/components.json
@@ -5,7 +5,8 @@
     "dark": "Sombre",
     "cosmic": "Cosmique",
     "corporate": "Entreprise",
-    "fresh": "Fresh"
+    "fresh": "Fresh",
+    "coffee": "Coffee"
   },
   "languageSwitcher": {
     "english": "Anglais",
