--- a/console/src/assets/languages/zh/components.json
+++ b/console/src/assets/languages/zh/components.json
@@ -5,7 +5,8 @@
     "dark": "深色",
     "cosmic": "宇宙",
     "corporate": "企业",
-    "fresh": "清新"
+    "fresh": "清新",
+    "coffee": "咖啡"
   },
   "languageSwitcher": {
     "english": "英语",
