feat(theme): add wine theme and update language support
- Introduced a new "wine" theme with corresponding updates in the base theme and types.
- Enhanced language files for English, French, and Chinese to include the wine theme.
- Updated theme exports to ensure the wine theme is available in the ThemeProvider, improving theme management.

--- a/console/src/assets/languages/en/components.json
+++ b/console/src/assets/languages/en/components.json
@@ -6,7 +6,8 @@
     "cosmic": "Cosmic",
     "corporate": "Corporate",
     "fresh": "Fresh",
-    "coffee": "Coffee"
+    "coffee": "Coffee",
+    "wine": "Wine"
   },
   "languageSwitcher": {
     "english": "English",
