--- a/console/src/assets/languages/fr/components.json
+++ b/console/src/assets/languages/fr/components.json
@@ -6,7 +6,8 @@
     "cosmic": "Cosmique",
     "corporate": "Entreprise",
     "fresh": "Fresh",
-    "coffee": "Coffee"
+    "coffee": "Coffee",
+    "wine": "Vin"
   },
   "languageSwitcher": {
     "english": "Anglais",
