--- a/console/src/assets/languages/zh/components.json
+++ b/console/src/assets/languages/zh/components.json
@@ -6,7 +6,8 @@
     "cosmic": "宇宙",
     "corporate": "企业",
     "fresh": "清新",
-    "coffee": "咖啡"
+    "coffee": "咖啡",
+    "wine": "酒红"
   },
   "languageSwitcher": {
     "english": "英语",
